cabal-version:      3.0
name:               Terminal3DGraphicsHaskell
version:            0.1.0.0
license-file:       LICENSE
author:             Larckson
maintainer:         LarckLarck@gmail.com
build-type:         Simple
extra-doc-files:    README.md
synopsis:           3D graphics in terminal
description:        Simple multi-file Haskell terminal 3D engine example.
category:           Graphics

common warnings
  ghc-options: -Wall

executable Terminal3DGraphicsHaskell
  import:           warnings
  main-is:          Main.hs
  build-depends:    base >=4.0 && <5.0
  hs-source-dirs:   src
  other-modules:    Vector, Matrix, TerminalGraphics, Tri
  default-language: Haskell2010
