cabal-version:   3.0
name:            terminal-3d-graphics
version:         0.1.0.0
synopsis:        A terminal 3D rasteriser with textures, portals, and baked lighting
description:
    Simple multi-module Haskell terminal 3D engine.
    Can be used as a library or compiled to a demo executable.
license-file:    LICENSE
author:          Larckson
maintainer:      LarckLarck@gmail.com
build-type:      Simple
category:        Graphics
extra-doc-files: README.md

-- -----------------------------------------------------------------------
-- Common settings shared by library and executable
-- -----------------------------------------------------------------------
common shared
    default-language: Haskell2010
    build-depends:
        base       >= 4.0 && < 5.0,
        bytestring,
        parallel,
        transformers,
        comonad,
        array,
        deepseq
    ghc-options:
        -Wall
        -O2
        -funbox-strict-fields
        -fspecialise-aggressively
        -optc-O3

-- -----------------------------------------------------------------------
-- Library: import Terminal3D to use the engine in your own project
-- -----------------------------------------------------------------------
library
    import:          shared
    hs-source-dirs:  src
    exposed-modules:
        Terminal3D
    other-modules:
        Terminal3D.Vector
        Terminal3D.Matrix
        Terminal3D.Textures
        Terminal3D.Tri
        Terminal3D.Lighting
        Terminal3D.TerminalGraphics
        Terminal3D.Objects

-- -----------------------------------------------------------------------
-- Executable: demo scene (room + cube + portals)
-- Run with:  cabal run t3d
-- -----------------------------------------------------------------------
executable t3d
    import:          shared
    main-is:         Main.hs
    hs-source-dirs:  app
    ghc-options:     -threaded -rtsopts
    build-depends:   terminal-3d-graphics:terminal-3d-graphics